# trinitylake

./: .gitignore  404.html  CNAME  README.md  build.gradle  gradle.properties  index.html  mkdocs-requirements.txt  mkdocs.yaml  settings.gradle  sitemap.xml
.baseline/checkstyle/: checkstyle-suppressions.xml  checkstyle.xml
.baseline/idea/: intellij-java-palantir-style.xml
.baseline/scala/: .scalafmt.conf
.github/workflows/: java-ci.yml  publish-site.yml
bundled-guava/: build.gradle
core/: build.gradle
docs/: .pages  index.md  join-us.md
docs/concepts/: index.md
docs/format/: .pages  commit.md  key-encoding.md  lakehouse-transaction.md  lakehouse.md  location.md  namespace.md  object-definition-file.md  overview.md  storage-layout.md  storage-location.md  storage-path.md  storage-transaction.md  storage.md  streaming.md  transaction.md  versioning.md
format/key-encoding/: index.html
format/lakehouse/: index.html
gradle/: libs.versions.toml
join-us/: index.html
proto/: Definitions.proto  LakeHouseDefinitions.proto  NamespaceDefinitions.proto  TableDefinitions.proto  lakehouse.proto  namespace.proto  table.proto
python/: pyproject.toml
pytrinity/: pyproject.toml
pytrinity/pytrinity/: lakehouse.py  lakehouse_version.py  object_key_encoder.py
pytrinity/pytrinity/protobuf/: Definitions.proto  Definitions_pb2.py
pytrinity/pytrinity/storage/: storage.py
pytrinity/pytrinity/tree/: __init__.py  trinity_tree.py
pytrinity/tests/: test.py
pytrinity/tests/tree/: test_trinity_tree.py
search/: search_index.json
spark/: build.gradle
(+212 files in other folders)
