[project]
name = "pytrinity"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyarrow (>=19.0.0,<20.0.0)",
    "protobuf (>=5.29.3,<6.0.0)",
    "black (>=24.10.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
